--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     font-style: normal;
     margin: 0;
     padding: 0;
-    font-size: 18px;
 }
 
 .navbar {
@@ -23,11 +22,14 @@ em {
 #footer, #footer3 {
     background: #801089;
     color: #fff;
-    font-size: 10px;
+    font-size: 16px;
 }
 
 #footer2, #footer4 {
     padding: 0px;
+    background: #801089;
+    color: #fff;
+    font-size: 16px;
 }
 
 h1 {
@@ -40,6 +42,10 @@ h1 {
 h2 {
     display: block;
     text-align: center;
+}
+
+body {
+    font-size: 18px;
 }
 
 #email {
@@ -70,6 +76,18 @@ h2 {
     margin-top: 20px;
 }
 
+#avtor {
+    background: #000;
+    color: #fff;
+    text-align: center;
+    font-size: 14px;
+}
+
+#cont {
+    color: #000;
+    font-size: 18px;
+    text-align: center;
+}
 
 
 @media (min-width: 768px) {
