--- a/css/style.css
+++ b/css/style.css
@@ -89,13 +89,17 @@ body {
     text-align: center;
 }
 
+#footer2, #footer4 {
+        text-align: center;
+    }
 
-@media (min-width: 768px) {
+
+/* Small devices (tablets, 768px and up) */
+@media (min-width: @screen-sm-min) {
     .col-sm-12 {
         padding: 0px;
     }
 
+
 }
-
-
 
