--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,19 @@ body {
         padding: 0px;
     }
 
+    .center-block {
+        padding-top: 20px;
+    }
 
 }
 
+
+
+
+
+
+/* Medium devices (desktops, 992px and up) */
+@media (min-width: @screen-md-min) { ... }
+
+/* Large devices (large desktops, 1200px and up) */
+@media (min-width: @screen-lg-min) { ... }
